--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,4 +4,7 @@
 @import "global/mixins.scss";
 
 // Block Styles
+@import "blocks/main-header.scss";
+@import "blocks/main-nav.scss";
 @import "blocks/page.scss";
+@import "blocks/user-nav.scss";
