--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,7 +4,11 @@
 @import "global/mixins.scss";
 
 // Block Styles
+@import "blocks/contact.scss";
+@import "blocks/footer-nav.scss";
+@import "blocks/main-footer.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page.scss";
+@import "blocks/social.scss";
 @import "blocks/user-nav.scss";
