Добавляет стили для блока Hero и Формы конвертации

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,11 +4,17 @@
 @import "global/mixins.scss";
 
 // Block Styles
+@import "blocks/button.scss";
 @import "blocks/contact.scss";
+@import "blocks/converter.scss";
+@import "blocks/convert-form.scss";
+@import "blocks/field.scss";
 @import "blocks/footer-nav.scss";
+@import "blocks/hero.scss";
 @import "blocks/main-footer.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page.scss";
 @import "blocks/social.scss";
 @import "blocks/user-nav.scss";
+@import "blocks/visually-hidden.scss";
