--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -2,7 +2,7 @@
   padding-top: 50px;
   padding-bottom: 40px;
 
-  font-size: $footer-font-size;
+  font-size: $font-size-footer;
   line-height: 1.4;
   color: $text-clr-footer;
 
