--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -3,7 +3,7 @@
   padding-top: 27px;
   padding-bottom: 35px;
 
-  font-size: $link-font-size;
+  font-size: $font-size-link;
 
   background-color: $bg-light;
 }
