--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,12 +1,12 @@
 // TIPOGRAPHY
-$basic-font: "Roboto", "Arial", sans-serif;
-$basic-font-size: 18px;
-$footer-font-size: 12px;
-$heading-font-size: 41px;
-$input-font-size: 24px;
-$label-font-size: 22px;
-$link-font-size: 16px;
-$subheading-font-size: 28px;
+$font-basic: "Roboto", "Arial", sans-serif;
+$font-size-basic: 18px;
+$font-size-footer: 12px;
+$font-size-heading: 41px;
+$font-size-input: 24px;
+$font-size-label: 22px;
+$font-size-link: 16px;
+$font-size-subheading: 28px;
 
 // COLORS: BACKGROUND
 $bg-basic: #ffffff;
@@ -21,4 +21,4 @@ $text-clr-footer: #707c87;
 $text-clr-light: #e0e1ea;
 
 // LAYOUT SIZES
-$basic-width: 1170px;
+$width-basic: 1170px;
