--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -13,7 +13,7 @@
 .contact__link {
   position: relative;
 
-  font-size: $link-font-size;
+  font-size: $font-size-link;
   line-height: 1.4;
   font-weight: 500;
   text-decoration: none;
