--- a/source/sass/blocks/convert-form.scss
+++ b/source/sass/blocks/convert-form.scss
@@ -18,7 +18,7 @@
   min-width: 382px;
   min-height: 60px;
 
-  font-size: $basic-font-size;
+  font-size: $font-size-basic;
   line-height: 1.4;
   font-weight: 500;
   color: $bg-light;
