--- a/source/sass/blocks/converter.scss
+++ b/source/sass/blocks/converter.scss
@@ -8,7 +8,7 @@
   margin: 0;
   margin-bottom: 60px;
 
-  font-size: $heading-font-size;
+  font-size: $font-size-heading;
   font-weight: bold;
   line-height: 1.4;
 }
