--- a/source/sass/blocks/field.scss
+++ b/source/sass/blocks/field.scss
@@ -2,7 +2,7 @@
   display: block;
   margin-bottom: 24px;
 
-  font-size: $label-font-size;
+  font-size: $font-size-label;
   line-height: 1.4;
 }
 
@@ -24,7 +24,7 @@
   &--input {
     width: 390px;
 
-    font-size: $input-font-size;
+    font-size: $font-size-input;
     font-weight: 500;
   }
 
