--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -8,7 +8,7 @@
 }
 
 .footer-nav__link {
-  font-size: $link-font-size;
+  font-size: $font-size-link;
   line-height: 1.4;
   font-weight: 500;
   color: $text-clr-basic;
