Правит отступы для Pixcel Perfect

--- a/source/sass/blocks/convert-form.scss
+++ b/source/sass/blocks/convert-form.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
 
-  margin-bottom: 85px;
+  margin-bottom: 67px;
 }
 
 .convert-form__field {
@@ -11,7 +11,9 @@
 }
 
 .convert-form__sign {
-  margin-top: 50px;
+  width: 56px;
+  margin-left: 7px;
+  margin-top: 46px;
 }
 
 .convert-form__button {
