--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,10 +10,12 @@
 @import "blocks/convert-form.scss";
 @import "blocks/field.scss";
 @import "blocks/footer-nav.scss";
+@import "blocks/history.scss";
 @import "blocks/hero.scss";
 @import "blocks/main-footer.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-nav.scss";
+@import "blocks/operation.scss";
 @import "blocks/page.scss";
 @import "blocks/social.scss";
 @import "blocks/user-nav.scss";
