--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -1,8 +1,10 @@
 .contact {
-  padding-left: 30px;
+  padding-top: 9px;
+  padding-left: 31px;
 
   &--mobile {
-    width: 197px;
+    width: 200px;
+    margin-right: 76px;
   }
 
   &--phone {
@@ -30,6 +32,11 @@
 
 .contact__icon {
   position: absolute;
-  top: 2px;
+  top: 1px;
   left: -30px;
+}
+
+.contact__text {
+  margin: 0;
+  margin-top: 2px;
 }
