Правит стили для select для корректного отображения в Mozila FF

--- a/source/sass/blocks/field.scss
+++ b/source/sass/blocks/field.scss
@@ -33,8 +33,10 @@
     width: 120px;
     padding-left: 16px;
     padding-right: 16px;
+
     font-size: 30px;
     font-weight: normal;
+    text-align: left;
 
     appearance: none;
     background-image: url("../img/arrow-down.svg");
