--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -24,7 +24,6 @@
   padding: 0;
   font-family: inherit;
   border: none;
-  display: inline-block;
   text-align: center;
   text-decoration: none;
   border-radius: 4px; }
@@ -127,6 +126,7 @@
     padding-right: 16px;
     font-size: 30px;
     font-weight: normal;
+    text-align: left;
     -webkit-appearance: none;
        -moz-appearance: none;
             appearance: none;
